$Id$

Wishlist for future features
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

-> see bottom of this document


MIDIboxSEQ V4.0beta22
~~~~~~~~~~~~~~~~~~~~~

  o running status optimisation can now be optionally disabled in
    the MBSEQ_HW.V4 file for MIDI devices that don't fully comply
    to the MIDI specification.
    Search for "RS_OPTIMISATION" in the MBSEQ_HW.V4 templates for
    further informations.


MIDIboxSEQ V4.0beta21
~~~~~~~~~~~~~~~~~~~~~

  o ongoing preparation work for BLM16x16
    Features will be described under http://www.ucapps.de/midibox_seq_manual_blm.html

  o the simple Transpose/Arpeggiator MIDI split function has been replaced by 
    a new bus routing concept.

    There are 4 busses that can be configured in the MIDI page.
    Each bus provides a dedicated MIDI port, channel and lower/upper MIDI note
    to define a keyboard range.

  o the bus can either be routed to the transpose/arpeggiator function ("T&A Mode"),
    or it can be used to play the currently selected track "live" ("Play Mode")

  o Track Mode page: now allows to select the bus over that the transpose/arpeggiator
    function should be controlled

  o Record function: whenever active, the MIDI port and channel used for recording
    won't be routed to Transpose/Arpeggiator/Play bus.

  o the "Roll" trigger now selects a 2D10 roll instead of 3D08 since it's more
    useful in most cases.
    In order to apply customized roll values, please use the roll function of
    the parameter layer instead of the Roll trigger.

  o implemented "Roll2" parameter layer function.
    This alternative solution to "Roll" allows to define the number of step repeats,
    and the distance between them.

  o added optional button/LED function for UNDO

  o fixed MIDI clock issue sent to USB5..USB8 (resulted into multiplied tempo 
    values in some DAWs)

  o CC assignment displayed correctly in mixer page

  o LFO CC not sent anymore if track is muted
